<resources>
    <string name="app_name">SoldOut</string>
    <string name="product_description">Loading</string>
    <!--    <string name="app_name">Product_page</string>-->
    <string name="seller_info"> Loading</string>
    <string name="product_price"><b>Loading</b></string>
    <string name="product_name"><b>Loading</b></string>
    <string name="loading"><b>Loading...</b></string>
    <string name="bid_now"><b>Bid Now</b></string>
    <string name="buy_now"><b>Buy Now</b></string>
    <string name="app_title">S o l d O u t</string>
    <string name="trending_products">Trending Products</string>
    <string name="profile">Profile</string>
    <string name="notifications"><b>Notifications</b></string>
    <string name="airpods">Victor Brown has bid for your Airpods for Rs. 7999</string>
    <string name="adidasOzeliya">Your bid for Adidas Ozeliya has been outbid by Alex</string>
    <string name="poeTextbook">Your POE Textbook was sold to Chris Brown for Rs. 7999</string>
    <string name="S20">Your S20 was sold to Brown Munde for Rs. 10999</string>
    <string name="bottle">Your bottle was sold to Joe for Rs. 799</string>
    <string name="your_bids"><b>Your Bids</b></string>
    <string name="hey_there"><b>Hey there!</b></string>
    <string name="your_products"><b>Your Products</b></string>
    <string name="phone_no">Phone No.</string>
    <string name="room_no">Room No.</string>
    <string name="name">Name</string>
    <string name="a_d_d_time">A d d    T i m e</string>
    <string-array name="tags">
        <item>
            <string name="all">All</string>
        </item>
        <item>
            <string name="electronics">Electronics</string>
        </item>
        <item>
            <string name="clothing">Clothing</string>
        </item>
        <item>
            <string name="utilities">Utilities</string>
        </item>
        <item>
            <string name="books">Books</string>
        </item>
        <item>
            <string name="others">Others</string>
        </item>

    </string-array>
</resources>